# irulan_old

./: CMakeLists.txt  README.md
include/: gl_debug.h
include/KHR/: khrplatform.h
include/SDL2/: SDL_assert.h  SDL_stdinc.h  begin_code.h
include/glad/: glad.h
include/irulan/: App.h  Defines.h  Shaders.h  irulan.h
include/irulan/Graph/: Renderer.h  Shader.h  Texture.h  Texture2D.h  VertexArray.h  VertexBuffer.h
include/irulan/Graph/2D/: Quads.h
include/irulan/Graph/2D/Font/: Text.h
include/irulan/Graph/3D/: MeshData.h
include/irulan/Graph/3D/Mesh/: AnimatedMesh.h  AnimatedMeshData.h  AnimatedMeshFrame.h  MeshData.h
include/irulan/Graph/Primitives/: VertexT.h
include/irulan/Graph/Render/: Drawable.h  Quads.h  RenderTarget.h
include/irulan/Graph2D/: Text.h
include/irulan/Graph2D/Font/: BitmapFont.h  Text.h
include/irulan/Math/: Matrix.h  Quaternion.h  Vector2.h  Vector2.tpp  Vector3.h  Vector3.tpp
include/irulan/Misc/: Rect.h  Timer.h
include/irulan/OpenGL/: GLObject.h  GLObject.tpp  GLTexture.h  GLTraits.h
include/irulan/Resources/: Resource.h
include/irulan/System/: App.h  Defines.h
include/irulan/System/Memory/: Buffer.h  BufferAllocator.h
include/irulan/System/OpenGL/: Debug.h  GLObject.h  GLObject.tpp
include/irulan/System/Resources/: Resource.h  ResourceManager.h
include/irulan/System/Resources/Loaders/: MeshLoader.h
include/irulan_e/: irulan_e.h
include/irulan_e/Graph/: SRenderer.h
include/irulan_e/Graph2D/: BitmapFont.h  Drawable2D.h  Sprite.h  Text.h
src/glad/: glad.c
src/irulan/: App.cpp  gl_debug.cpp
src/irulan/Graph/: Renderer.cpp  Shader.cpp  Texture.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
src/irulan/Graph/2D/: Quads.cpp
src/irulan/Graph/2D/Font/: BitmapFont.cpp  Text.cpp
src/irulan/Graph/3D/: MeshData.cpp
src/irulan/Graph/3D/Mesh/: AnimatedMesh.cpp  AnimatedMeshData.cpp  AnimatedMeshFrame.cpp  MeshData.cpp
src/irulan/Graph/Primitives/: VertexT.cpp
src/irulan/Graph/Render/: Quads.cpp  RenderTarget.cpp
src/irulan/Graph2D/: BitmapFont.cpp  Text.cpp
src/irulan/Graph2D/Font/: BitmapFont.cpp  Text.cpp
src/irulan/Math/: Matrix.cpp  Quaternion.cpp  Vector3.cpp
src/irulan/Misc/: Timer.cpp
src/irulan/OpenGL/: Debug.cpp  GLTexture.cpp  GLTraits.cpp
src/irulan/Resources/: Resource.cpp
src/irulan/System/: App.cpp
src/irulan/System/Memory/: Buffer.cpp  BufferAllocator.cpp
src/irulan/System/OpenGL/: Debug.cpp  GLTraits.cpp
src/irulan/System/Resources/: Resource.cpp  ResourceManager.cpp
src/irulan/System/Resources/Loaders/: MeshLoader.cpp
src/irulan_e/Graph2D/: BitmapFont.cpp  Sprite.cpp  Text.cpp
test/: CMakeLists.txt  TestApp.cpp  TestApp.h  main.cpp
